@@ -17,4 +17,7 @@ extern co_rc_t co_os_file_load(co_pathname_t pathname,
 			       char **out_buf, unsigned long *out_size, unsigned long max_size);
 extern void co_os_file_free(char *buf);
 
+extern co_rc_t co_os_file_write(co_pathname_t pathname, void *buf, unsigned long size);
+extern co_rc_t co_os_file_unlink(co_pathname_t pathname);
+
 #endif
