@@ -52,17 +52,19 @@ void console_window_t::syntax()
 	co_terminal_print("\n");
 	co_terminal_print("syntax: \n");
 	co_terminal_print("\n");
-	co_terminal_print("    %s [-a id]\n", get_name());
+	co_terminal_print("    %s [-a id | -p pidfile]\n", get_name());
 	co_terminal_print("\n");
 	co_terminal_print("      -a id      Specifies the ID of the coLinux instance to connect.\n");
 	co_terminal_print("                 The ID is the PID (process ID) of the colinux-daemon\n");
 	co_terminal_print("                 processes for that running instance\n");
+	co_terminal_print("      -p pidfile Read ID from this file.\n");
 	co_terminal_print("\n");
 }
 
 co_rc_t console_window_t::parse_args(int argc, char **argv)
 {
-	bool_t instance_specified;
+	bool_t pidfile_specified;
+	co_pathname_t pidfile;
 	co_command_line_params_t cmdline;
 	co_rc_t rc;
 
@@ -74,12 +76,29 @@ co_rc_t console_window_t::parse_args(int argc, char **argv)
 		goto out_clean;
 	}
 
-	rc = co_cmdline_params_one_arugment_int_parameter(cmdline, "-a", &instance_specified, 
-							  (int *)&start_parameters.attach_id);
+	rc = co_cmdline_params_one_arugment_int_parameter(cmdline, "-a",
+				NULL, (int *)&start_parameters.attach_id);
 
 	if (!CO_OK(rc)) {
 		syntax();
 		goto out;
+	}
+
+	rc = co_cmdline_params_one_arugment_parameter(cmdline, "-p",
+			&pidfile_specified,
+			pidfile, sizeof(pidfile));
+
+	if (!CO_OK(rc)) {
+		syntax();
+		goto out;
+	}
+
+	if (pidfile_specified) {
+		rc = read_pid_from_file(pidfile, &start_parameters.attach_id);
+		if (!CO_OK(rc)) {
+			co_terminal_print("error on reading PID from file '%s'\n", &pidfile);
+			return CO_RC(ERROR);
+		}
 	}
 
 	rc = co_cmdline_params_check_for_no_unparsed_parameters(cmdline, PTRUE);
@@ -88,45 +107,11 @@ co_rc_t console_window_t::parse_args(int argc, char **argv)
 		goto out;
 	}
 
-#if 0
-	if (!instance_specified) {
-		co_terminal_print("console: error, coLinux instance ID must be specified\n");
-		syntax();
-		return CO_RC(ERROR);
-	}
-#endif
-
 out:
 	co_cmdline_params_free(cmdline);
 
 out_clean:
 	return rc;
-}
-
-/**
- * Returns PID of first monitor.
- *
- * If none found, returns CO_INVALID_ID.
- *
- * TODO: Find first monitor not already attached.
- *       Duplicate source in src/colinux/user/console/console.cpp
- */
-static co_id_t find_first_monitor(void)
-{
-	co_manager_handle_t handle;
-	co_manager_ioctl_monitor_list_t	list;
-	co_rc_t	rc;
-
-	handle = co_os_manager_open();
-	if (handle == NULL)
-		return CO_INVALID_ID;
-
-	rc = co_manager_monitor_list(handle, &list);
-	co_os_manager_close(handle);
-	if (!CO_OK(rc) || list.count == 0)
-		return CO_INVALID_ID;
-
-	return list.ids[0];
 }
 
 co_rc_t console_window_t::send_ctrl_alt_del()
@@ -172,9 +157,8 @@ co_rc_t console_window_t::start()
 
 	log("Coopeartive Linux console started\n");
 
-	if (start_parameters.attach_id != CO_INVALID_ID) {
+	if (start_parameters.attach_id != CO_INVALID_ID)
 		instance_id = start_parameters.attach_id;
-	}
 
 	if (instance_id == CO_INVALID_ID)
 		instance_id = find_first_monitor();
